chapter5/tiger.output
State 19 conflicts: 1 shift/reduce
State 32 conflicts: 1 shift/reduce
State 35 conflicts: 1 shift/reduce
State 88 conflicts: 13 shift/reduce
State 89 conflicts: 12 shift/reduce
State 116 conflicts: 12 shift/reduce
State 123 conflicts: 12 shift/reduce
State 133 conflicts: 12 shift/reduce


Grammar

    0 $accept: program $end

    1 program: exp

    2 exp: lvalue
    3    | lvalue ASSIGN exp
    4    | NIL
    5    | seq
    6    | INT
    7    | STRING
    8    | MINUS exp
    9    | funcall
   10    | exp PLUS exp
   11    | exp MINUS exp
   12    | exp TIMES exp
   13    | exp DIVIDE exp
   14    | exp EQ exp
   15    | exp NEQ exp
   16    | exp LT exp
   17    | exp LE exp
   18    | exp GT exp
   19    | exp GE exp
   20    | exp AND exp
   21    | exp OR exp
   22    | record_cre
   23    | array
   24    | IF exp THEN exp ELSE exp
   25    | IF exp THEN exp
   26    | WHILE exp DO exp
   27    | FOR id ASSIGN exp TO exp DO exp
   28    | BREAK
   29    | LET declist IN explist END

   30 seq: LPAREN explist RPAREN

   31 explist: exp SEMICOLON explist
   32        | exp
   33        | /* empty */

   34 funcall: id LPAREN args RPAREN

   35 args: exp COMMA args
   36     | exp
   37     | /* empty */

   38 record_cre: id LBRACE efieldlist RBRACE

   39 efieldlist: id EQ exp COMMA efieldlist
   40           | id EQ exp
   41           | /* empty */

   42 declist: dec declist
   43        | /* empty */

   44 dec: tydecs
   45    | vardec
   46    | fundecs

   47 tydecs: tydec tydecs
   48       | tydec

   49 tydec: TYPE id EQ ty

   50 ty: id
   51   | LBRACE fieldlist RBRACE
   52   | ARRAY OF id

   53 fieldlist: id COLON id COMMA fieldlist
   54          | id COLON id
   55          | /* empty */

   56 vardec: VAR id ASSIGN exp
   57       | VAR id COLON id ASSIGN exp

   58 fundecs: fundec fundecs
   59        | fundec

   60 fundec: FUNCTION id LPAREN fieldlist RPAREN EQ exp
   61       | FUNCTION id LPAREN fieldlist RPAREN COLON id EQ exp

   62 lvalue: id
   63       | lvalue DOT id
   64       | lvalue LBRACK exp RBRACK
   65       | id LBRACK exp RBRACK

   66 array: id LBRACK exp RBRACK OF exp

   67 id: ID


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 67
STRING (259) 7
INT (260) 6
ASSIGN (261) 3 27 56 57
OR (262) 21
AND (263) 20
GE (264) 19
GT (265) 18
LE (266) 17
LT (267) 16
NEQ (268) 15
EQ (269) 14 39 40 49 60 61
MINUS (270) 8 11
PLUS (271) 10
DIVIDE (272) 13
TIMES (273) 12
UMINUS (274)
COMMA (275) 35 39 53
COLON (276) 53 54 57 61
SEMICOLON (277) 31
LPAREN (278) 30 34 60 61
RPAREN (279) 30 34 60 61
LBRACK (280) 64 65 66
RBRACK (281) 64 65 66
LBRACE (282) 38 51
RBRACE (283) 38 51
DOT (284) 63
ARRAY (285) 52
IF (286) 24 25
THEN (287) 24 25
ELSE (288) 24
WHILE (289) 26
FOR (290) 27
TO (291) 27
DO (292) 26 27
LET (293) 29
IN (294) 29
END (295) 29
OF (296) 52 66
BREAK (297) 28
NIL (298) 4
FUNCTION (299) 60 61
VAR (300) 56 57
TYPE (301) 49


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
exp (49)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    23 24 25 26 27 28 29, on right: 1 3 8 10 11 12 13 14 15 16 17 18
    19 20 21 24 25 26 27 31 32 35 36 39 40 56 57 60 61 64 65 66
seq (50)
    on left: 30, on right: 5
explist (51)
    on left: 31 32 33, on right: 29 30 31
funcall (52)
    on left: 34, on right: 9
args (53)
    on left: 35 36 37, on right: 34 35
record_cre (54)
    on left: 38, on right: 22
efieldlist (55)
    on left: 39 40 41, on right: 38 39
declist (56)
    on left: 42 43, on right: 29 42
dec (57)
    on left: 44 45 46, on right: 42
tydecs (58)
    on left: 47 48, on right: 44 47
tydec (59)
    on left: 49, on right: 47 48
ty (60)
    on left: 50 51 52, on right: 49
fieldlist (61)
    on left: 53 54 55, on right: 51 53 60 61
vardec (62)
    on left: 56 57, on right: 45
fundecs (63)
    on left: 58 59, on right: 46 58
fundec (64)
    on left: 60 61, on right: 58 59
lvalue (65)
    on left: 62 63 64 65, on right: 2 3 63 64
array (66)
    on left: 66, on right: 23
id (67)
    on left: 67, on right: 27 34 38 39 40 49 50 52 53 54 56 57 60 61
    62 63 65 66


state 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program     go to state 12
    exp         go to state 13
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 1

   67 id: ID .

    $default  reduce using rule 67 (id)


state 2

    7 exp: STRING .

    $default  reduce using rule 7 (exp)


state 3

    6 exp: INT .

    $default  reduce using rule 6 (exp)


state 4

    8 exp: MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 20
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 5

   30 seq: LPAREN . explist RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 33 (explist)

    exp         go to state 21
    seq         go to state 14
    explist     go to state 22
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 6

   24 exp: IF . exp THEN exp ELSE exp
   25    | IF . exp THEN exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 23
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 7

   26 exp: WHILE . exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 24
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 8

   27 exp: FOR . id ASSIGN exp TO exp DO exp

    ID  shift, and go to state 1

    id  go to state 25


state 9

   29 exp: LET . declist IN explist END

    FUNCTION  shift, and go to state 26
    VAR       shift, and go to state 27
    TYPE      shift, and go to state 28

    $default  reduce using rule 43 (declist)

    declist  go to state 29
    dec      go to state 30
    tydecs   go to state 31
    tydec    go to state 32
    vardec   go to state 33
    fundecs  go to state 34
    fundec   go to state 35


state 10

   28 exp: BREAK .

    $default  reduce using rule 28 (exp)


state 11

    4 exp: NIL .

    $default  reduce using rule 4 (exp)


state 12

    0 $accept: program . $end

    $end  shift, and go to state 36


state 13

    1 program: exp .
   10 exp: exp . PLUS exp
   11    | exp . MINUS exp
   12    | exp . TIMES exp
   13    | exp . DIVIDE exp
   14    | exp . EQ exp
   15    | exp . NEQ exp
   16    | exp . LT exp
   17    | exp . LE exp
   18    | exp . GT exp
   19    | exp . GE exp
   20    | exp . AND exp
   21    | exp . OR exp

    OR      shift, and go to state 37
    AND     shift, and go to state 38
    GE      shift, and go to state 39
    GT      shift, and go to state 40
    LE      shift, and go to state 41
    LT      shift, and go to state 42
    NEQ     shift, and go to state 43
    EQ      shift, and go to state 44
    MINUS   shift, and go to state 45
    PLUS    shift, and go to state 46
    DIVIDE  shift, and go to state 47
    TIMES   shift, and go to state 48

    $default  reduce using rule 1 (program)


state 14

    5 exp: seq .

    $default  reduce using rule 5 (exp)


state 15

    9 exp: funcall .

    $default  reduce using rule 9 (exp)


state 16

   22 exp: record_cre .

    $default  reduce using rule 22 (exp)


state 17

    2 exp: lvalue .
    3    | lvalue . ASSIGN exp
   63 lvalue: lvalue . DOT id
   64       | lvalue . LBRACK exp RBRACK

    ASSIGN  shift, and go to state 49
    LBRACK  shift, and go to state 50
    DOT     shift, and go to state 51

    $default  reduce using rule 2 (exp)


state 18

   23 exp: array .

    $default  reduce using rule 23 (exp)


state 19

   34 funcall: id . LPAREN args RPAREN
   38 record_cre: id . LBRACE efieldlist RBRACE
   62 lvalue: id .
   65       | id . LBRACK exp RBRACK
   66 array: id . LBRACK exp RBRACK OF exp

    LPAREN  shift, and go to state 52
    LBRACK  shift, and go to state 53
    LBRACE  shift, and go to state 54

    LBRACK    [reduce using rule 62 (lvalue)]
    $default  reduce using rule 62 (lvalue)


state 20

    8 exp: MINUS exp .
   10    | exp . PLUS exp
   11    | exp . MINUS exp
   12    | exp . TIMES exp
   13    | exp . DIVIDE exp
   14    | exp . EQ exp
   15    | exp . NEQ exp
   16    | exp . LT exp
   17    | exp . LE exp
   18    | exp . GT exp
   19    | exp . GE exp
   20    | exp . AND exp
   21    | exp . OR exp

    $default  reduce using rule 8 (exp)


state 21

   10 exp: exp . PLUS exp
   11    | exp . MINUS exp
   12    | exp . TIMES exp
   13    | exp . DIVIDE exp
   14    | exp . EQ exp
   15    | exp . NEQ exp
   16    | exp . LT exp
   17    | exp . LE exp
   18    | exp . GT exp
   19    | exp . GE exp
   20    | exp . AND exp
   21    | exp . OR exp
   31 explist: exp . SEMICOLON explist
   32        | exp .

    OR         shift, and go to state 37
    AND        shift, and go to state 38
    GE         shift, and go to state 39
    GT         shift, and go to state 40
    LE         shift, and go to state 41
    LT         shift, and go to state 42
    NEQ        shift, and go to state 43
    EQ         shift, and go to state 44
    MINUS      shift, and go to state 45
    PLUS       shift, and go to state 46
    DIVIDE     shift, and go to state 47
    TIMES      shift, and go to state 48
    SEMICOLON  shift, and go to state 55

    $default  reduce using rule 32 (explist)


state 22

   30 seq: LPAREN explist . RPAREN

    RPAREN  shift, and go to state 56


state 23

   10 exp: exp . PLUS exp
   11    | exp . MINUS exp
   12    | exp . TIMES exp
   13    | exp . DIVIDE exp
   14    | exp . EQ exp
   15    | exp . NEQ exp
   16    | exp . LT exp
   17    | exp . LE exp
   18    | exp . GT exp
   19    | exp . GE exp
   20    | exp . AND exp
   21    | exp . OR exp
   24    | IF exp . THEN exp ELSE exp
   25    | IF exp . THEN exp

    OR      shift, and go to state 37
    AND     shift, and go to state 38
    GE      shift, and go to state 39
    GT      shift, and go to state 40
    LE      shift, and go to state 41
    LT      shift, and go to state 42
    NEQ     shift, and go to state 43
    EQ      shift, and go to state 44
    MINUS   shift, and go to state 45
    PLUS    shift, and go to state 46
    DIVIDE  shift, and go to state 47
    TIMES   shift, and go to state 48
    THEN    shift, and go to state 57


state 24

   10 exp: exp . PLUS exp
   11    | exp . MINUS exp
   12    | exp . TIMES exp
   13    | exp . DIVIDE exp
   14    | exp . EQ exp
   15    | exp . NEQ exp
   16    | exp . LT exp
   17    | exp . LE exp
   18    | exp . GT exp
   19    | exp . GE exp
   20    | exp . AND exp
   21    | exp . OR exp
   26    | WHILE exp . DO exp

    OR      shift, and go to state 37
    AND     shift, and go to state 38
    GE      shift, and go to state 39
    GT      shift, and go to state 40
    LE      shift, and go to state 41
    LT      shift, and go to state 42
    NEQ     shift, and go to state 43
    EQ      shift, and go to state 44
    MINUS   shift, and go to state 45
    PLUS    shift, and go to state 46
    DIVIDE  shift, and go to state 47
    TIMES   shift, and go to state 48
    DO      shift, and go to state 58


state 25

   27 exp: FOR id . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 59


state 26

   60 fundec: FUNCTION . id LPAREN fieldlist RPAREN EQ exp
   61       | FUNCTION . id LPAREN fieldlist RPAREN COLON id EQ exp

    ID  shift, and go to state 1

    id  go to state 60


state 27

   56 vardec: VAR . id ASSIGN exp
   57       | VAR . id COLON id ASSIGN exp

    ID  shift, and go to state 1

    id  go to state 61


state 28

   49 tydec: TYPE . id EQ ty

    ID  shift, and go to state 1

    id  go to state 62


state 29

   29 exp: LET declist . IN explist END

    IN  shift, and go to state 63


state 30

   42 declist: dec . declist

    FUNCTION  shift, and go to state 26
    VAR       shift, and go to state 27
    TYPE      shift, and go to state 28

    $default  reduce using rule 43 (declist)

    declist  go to state 64
    dec      go to state 30
    tydecs   go to state 31
    tydec    go to state 32
    vardec   go to state 33
    fundecs  go to state 34
    fundec   go to state 35


state 31

   44 dec: tydecs .

    $default  reduce using rule 44 (dec)


state 32

   47 tydecs: tydec . tydecs
   48       | tydec .

    TYPE  shift, and go to state 28

    TYPE      [reduce using rule 48 (tydecs)]
    $default  reduce using rule 48 (tydecs)

    tydecs  go to state 65
    tydec   go to state 32


state 33

   45 dec: vardec .

    $default  reduce using rule 45 (dec)


state 34

   46 dec: fundecs .

    $default  reduce using rule 46 (dec)


state 35

   58 fundecs: fundec . fundecs
   59        | fundec .

    FUNCTION  shift, and go to state 26

    FUNCTION  [reduce using rule 59 (fundecs)]
    $default  reduce using rule 59 (fundecs)

    fundecs  go to state 66
    fundec   go to state 35


state 36

    0 $accept: program $end .

    $default  accept


state 37

   21 exp: exp OR . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 67
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 38

   20 exp: exp AND . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 68
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 39

   19 exp: exp GE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 69
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 40

   18 exp: exp GT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 70
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 41

   17 exp: exp LE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 71
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 42

   16 exp: exp LT . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 72
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 43

   15 exp: exp NEQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 73
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 44

   14 exp: exp EQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 74
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 45

   11 exp: exp MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 75
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 46

   10 exp: exp PLUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 76
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 47

   13 exp: exp DIVIDE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 77
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 48

   12 exp: exp TIMES . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 78
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 49

    3 exp: lvalue ASSIGN . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 79
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 50

   64 lvalue: lvalue LBRACK . exp RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 80
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 51

   63 lvalue: lvalue DOT . id

    ID  shift, and go to state 1

    id  go to state 81


state 52

   34 funcall: id LPAREN . args RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 37 (args)

    exp         go to state 82
    seq         go to state 14
    funcall     go to state 15
    args        go to state 83
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 53

   65 lvalue: id LBRACK . exp RBRACK
   66 array: id LBRACK . exp RBRACK OF exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 84
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 54

   38 record_cre: id LBRACE . efieldlist RBRACE

    ID  shift, and go to state 1

    $default  reduce using rule 41 (efieldlist)

    efieldlist  go to state 85
    id          go to state 86


state 55

   31 explist: exp SEMICOLON . explist

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 33 (explist)

    exp         go to state 21
    seq         go to state 14
    explist     go to state 87
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 56

   30 seq: LPAREN explist RPAREN .

    $default  reduce using rule 30 (seq)


state 57

   24 exp: IF exp THEN . exp ELSE exp
   25    | IF exp THEN . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 88
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 58

   26 exp: WHILE exp DO . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 89
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 59

   27 exp: FOR id ASSIGN . exp TO exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp         go to state 90
    seq         go to state 14
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 60

   60 fundec: FUNCTION id . LPAREN fieldlist RPAREN EQ exp
   61       | FUNCTION id . LPAREN fieldlist RPAREN COLON id EQ exp

    LPAREN  shift, and go to state 91


state 61

   56 vardec: VAR id . ASSIGN exp
   57       | VAR id . COLON id ASSIGN exp

    ASSIGN  shift, and go to state 92
    COLON   shift, and go to state 93


state 62

   49 tydec: TYPE id . EQ ty

    EQ  shift, and go to state 94


state 63

   29 exp: LET declist IN . explist END

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    MINUS   shift, and go to state 4
    LPAREN  shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    $default  reduce using rule 33 (explist)

    exp         go to state 21
    seq         go to state 14
    explist     go to state 95
    funcall     go to state 15
    record_cre  go to state 16
    lvalue      go to state 17
    array       go to state 18
    id          go to state 19


state 64

   42 declist: dec declist .

    $default  reduce using rule 42 (declist)


state 65

   47 tydecs: tydec tydecs .

    $default  reduce using rule 47 (tydecs)


state 66

   58 fundecs: fundec fundecs .

    $default  reduce using rule 58 (fundecs)


state 67

   10 exp: exp . PLUS exp
   11    | exp . MINUS exp
   12    | exp . TIMES exp
   13    | exp . DIVIDE exp
   14    | exp . EQ exp
   15    | exp . NEQ exp
   16    | exp . LT exp
   17    | exp . LE exp
   18    | exp . GT exp
   19    | exp . GE exp
   20    | exp . AND exp
   21    | exp . OR exp
   21    | exp OR exp .

    GE      shift, and go to state 39
    GT      shift, and go to state 40
    LE      shift, and go to state 41
    LT      shift, and go to state 42
    NEQ     shift, and go to state 43
    EQ      shift, and go to state 44
    MINUS   shift, and go to state 45
    PLUS    shift, and go to state 46
    DIVIDE  shift, and go to state 47
    TIMES   shift, and go to state 48

    $default  reduce using rule 21 (exp)


state 68

   10 exp: exp . PLUS exp
   11    | exp . MINUS exp
   12    | exp . TIMES exp
   13    | exp . DIVIDE exp
   14    | exp . EQ exp
   15    | exp . NEQ exp
   16    | exp . LT exp
   17    | exp . LE exp
   18    | exp . GT exp
   19    | exp . GE exp
   20    | exp . AND exp
   20    | exp AND exp .
   21    | exp . OR exp

    GE      shift, and go to state 39
    GT      shift, and go to state 40
    LE      shift, and go to state 41
    LT      shift, and go to state 42
    NEQ     shift, and go to state 43
    EQ      shift, and go to state 44
    MINUS   shift, and go to state 45
    PLUS    shift, and go to state 46
    DIVIDE  shift, and go to state 47
    TIMES   shift, and go to state 48

    $default  reduce using rule 20 (exp)


state 69

   10 exp: exp . PLUS exp
   11    | exp . MINUS exp
   12    | exp . TIMES exp
   13    | exp . DIVIDE exp
   14    | exp . EQ exp
   15    | exp . NEQ exp
   16    | exp . LT exp
   17    | exp . LE exp
   18    | exp . GT exp
   19    | exp . GE exp
   19    | exp GE exp .
   20    | exp . AND exp
   21    | exp . OR exp

    MINUS   shift, and go to state 45
    PLUS    shift, and go to state 46
    DIVIDE  shift, and go to state 47
    TIMES   shift, and go to state 48

    GE   error (nonassociative)
    GT   error (nonassociative)
    LE   error (nonassociative)
    LT   error (nonassociative)
    NEQ  error (nonassociative)
    EQ   error (nonassociative)

    $default  reduce using rule 19 (exp)


state 70
